# wodd-2026

./: .gitignore  LICENSE  README.md
api/: pyproject.toml
api/core/: config.py
api/models/: requests.py
backend/: .env.example  .env.local  main.py  pyproject.toml
backend/core/: cache.py  config.py
backend/data/: neighbourhood_coords.json  reference_cities.json  zones.json
backend/models/: requests.py  responses.py
backend/routers/: calculator.py  comparison.py  data.py  onboarding.py  plan.py  zones.py
backend/services/: calculator.py  comparison.py  llm.py  onboarding.py  socrata.py  transit.py  zones.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/budget-simulator/: page.tsx
frontend/components/charts/: CommuteChart.tsx  CostBarChart.tsx  SavingsChart.tsx
frontend/components/layout/: ExploreNav.tsx  Sidebar.tsx  StepNav.tsx  TopNav.tsx
frontend/components/maps/: CanadaMap.tsx  CommuteMap.tsx  HotspotMap.tsx  ItineraryMap.tsx  MirrorMap.tsx
frontend/components/ui/: CitySearchInput.tsx  DataCard.tsx  InsightBanner.tsx  MetricTile.tsx  PersonaTag.tsx  PillButton.tsx  SectionHeader.tsx  SourceTooltip.tsx
frontend/data/: cities.json  commute-data.json  festivals.json  neighborhoods.json  winnipeg-hotspots.json
frontend/lib/: api.ts  calculations.ts  exportFinance.ts  financeTable.ts  mapConfig.ts
frontend/store/: useCompanyStore.ts
notebook/: deploy.sh  pyproject.toml  run.sh  slides.py
(+8 files in other folders)
