[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "certifi>=2024.0",
    "fastapi[standard]>=0.135.1",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "lxml>=5.0",
    "pydantic-settings>=2.13.1",
    "pypdf>=5.0",
    "python-docx>=1.1",
]
